fix: remove Java 17 features for older IDE compat